--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>学園祭サバゲー｜武器画像で動画再生（Web版）</title>
+  <title>学園祭サバゲー｜動画再生</title>
   <style>
     :root{ --bg:#000000; --card:#111111; --accent:#48c78e; --text:#ffffff; }
     *{box-sizing:border-box}
@@ -26,42 +26,34 @@
 
     /* ====== メインUI ====== */
     .wrap{display:grid;gap:16px;padding:16px}
-    body:not(.played) .wrap{grid-template-columns:1fr}
-    body.played .wrap{grid-template-columns:300px 1fr}
     .panel{background:var(--card);border:1px solid #333;border-radius:16px}
-    .controls{padding:16px;display:flex;flex-direction:column;gap:12px}
-    body:not(.played) .thumb-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
-    body.played .thumb-grid{display:flex;flex-direction:column;gap:12px}
-    .img-btn{position:relative;overflow:hidden;border-radius:12px;border:1px solid #333;background:#111;cursor:pointer}
-    body:not(.played) .img-btn img{width:100%;height:140px;object-fit:cover}
-    body.played .img-btn img{width:100%;height:80px;object-fit:cover}
-    .img-label{position:absolute;left:8px;bottom:8px;padding:4px 8px;border-radius:8px;background:rgba(0,0,0,.6);font-size:13px}
-    .play-icon{position:absolute;right:8px;top:8px;width:32px;height:32px;border-radius:50%;display:grid;place-items:center;background:rgba(0,0,0,.55)}
-    .btn-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-    .btn{border:1px solid #666;background:#222;color:#fff;padding:8px 10px;border-radius:8px;font-size:13px;cursor:pointer}
-    .btn:hover{background:#333}
     body:not(.played) .screen{display:none}
     body.played .screen{display:flex}
     .screen{border:1px solid #333;border-radius:16px;overflow:hidden}
-    .stage{width:100%;height:100%;background:#000;min-height:60vh;display:flex;align-items:center;justify-content:center}
+    .stage{width:100%;height:100%;background:#000;min-height:80vh;display:flex;align-items:center;justify-content:center}
     .stage video{width:100%;height:100%;object-fit:contain}
     .status{color:#0f0;font-size:12px;border-top:1px solid #333;padding:6px}
+
+    /* ===== 管理パネル ===== */
+    #adminBar{position:fixed;inset:auto 8px 8px 8px;display:none;z-index:1000;background:#0b0b0b;border:1px solid #333;border-radius:12px;padding:10px;box-shadow:0 10px 30px rgba(0,0,0,.6)}
+    #adminBar.active{display:block}
+    #adminBar h3{margin:0 0 8px;font-size:14px}
+    #adminBar button{border:1px solid #555;background:#1d1d1d;color:#fff;border-radius:8px;padding:8px;font-size:12px;cursor:pointer}
+    #adminBar button:hover{background:#2a2a2a}
   </style>
 </head>
 <body class="gate-active">
   <header>
-    <h1>学園祭サバゲー（Web版）</h1>
-    <div class="tiny">確認 → ルール説明 → 諸注意 → 武器選択（横4列）</div>
+    <h1>学園祭サバゲー</h1>
+    <div class="tiny">確認 → ルール説明 → 諸注意 → 動画再生（1本表示）</div>
   </header>
 
-  <!-- 入室ゲート（Step1〜3） -->
+  <!-- 入室ゲート -->
   <div class="gate" id="gate">
-    <!-- Step1: 確認 -->
     <div class="gate-card" id="step1">
       <p class="gate-title">ここは4階Aグループ</p>
       <button class="gate-btn" id="btn-confirm">確認</button>
     </div>
-    <!-- Step2: ルール説明 -->
     <div class="gate-card" id="step2" style="display:none;">
       <h2>ルール説明</h2>
       <ul class="gate-list">
@@ -71,7 +63,6 @@
       </ul>
       <button class="gate-btn" id="btn-rule-next">次へ</button>
     </div>
-    <!-- Step3: 諸注意 -->
     <div class="gate-card" id="step3" style="display:none;">
       <h2>諸注意</h2>
       <ul class="gate-list">
@@ -83,48 +74,16 @@
     </div>
   </div>
 
-  <!-- Step4: 武器選択と動画再生 -->
+  <!-- 動画再生エリア -->
   <main class="wrap">
-    <section class="panel controls">
-      <div class="thumb-grid">
-        <button class="img-btn" data-video="videos/handgun.mp4" data-label="ハンドガン">
-          <img src="images/handgun.jpg" alt="ハンドガン"><div class="img-label">ハンドガン</div><div class="play-icon">▶</div>
-        </button>
-        <button class="img-btn" data-video="videos/shotgun.mp4" data-label="ショットガン">
-          <img src="images/shotgun.jpg" alt="ショットガン"><div class="img-label">ショットガン</div><div class="play-icon">▶</div>
-        </button>
-        <button class="img-btn" data-video="videos/ar.mp4" data-label="アサルト">
-          <img src="images/ar.jpg" alt="アサルト"><div class="img-label">アサルト</div><div class="play-icon">▶</div>
-        </button>
-        <button class="img-btn" data-video="videos/smg.mp4" data-label="SMG">
-          <img src="images/smg.jpg" alt="SMG"><div class="img-label">SMG</div><div class="play-icon">▶</div>
-        </button>
-        <button class="img-btn" data-video="videos/sniper.mp4" data-label="スナイパー">
-          <img src="images/sniper.jpg" alt="スナイパー"><div class="img-label">スナイパー</div><div class="play-icon">▶</div>
-        </button>
-        <button class="img-btn" data-video="videos/knife.mp4" data-label="ナイフ">
-          <img src="images/knife.jpg" alt="ナイフ"><div class="img-label">ナイフ</div><div class="play-icon">▶</div>
-        </button>
-      </div>
-      <div class="btn-row">
-        <button class="btn" id="btn-stop">停止</button>
-        <button class="btn" id="btn-full">全画面</button>
-      </div>
-      <div class="status" id="status">READY</div>
-    </section>
     <section class="panel screen">
-      <div class="stage" id="stage"><video id="player" preload="metadata" playsinline webkit-playsinline></video></div>
+      <div class="stage" id="stage">
+        <video id="player" src="videos/demo.mp4" controls playsinline webkit-playsinline></video>
+      </div>
     </section>
   </main>
 
   <script>
-    // ===== 共通DOM =====
-    const player = document.getElementById('player');
-    const stage  = document.getElementById('stage');
-    const statusEl = document.getElementById('status');
-    const setStatus = (t)=> statusEl && (statusEl.textContent = t);
-
-    // ===== 入室ゲートのフロー =====
     const gate = document.getElementById('gate');
     const step1 = document.getElementById('step1');
     const step2 = document.getElementById('step2');
@@ -132,18 +91,11 @@
     const btnConfirm = document.getElementById('btn-confirm');
     const btnRuleNext = document.getElementById('btn-rule-next');
     const btnAccept = document.getElementById('btn-accept');
+
     btnConfirm.addEventListener('click', ()=>{ step1.style.display='none'; step2.style.display='block'; });
     btnRuleNext.addEventListener('click', ()=>{ step2.style.display='none'; step3.style.display='block'; });
     btnAccept.addEventListener('click', ()=>{ document.body.classList.remove('gate-active'); gate.style.display='none'; });
-
-    // ===== 再生UI =====
-    let firstPlayed=false;
-    function switchLayout(){ if(!firstPlayed){ firstPlayed=true; document.body.classList.add('played'); }}
-    function playVideo(src,label){ if(!src) return; player.src=src; player.play().then(()=>{ switchLayout(); setStatus('再生: '+(label||src)); }).catch(e=> setStatus('再生エラー: '+e.message)); }
-    document.querySelectorAll('.img-btn').forEach(b=> b.addEventListener('click', ()=> playVideo(b.dataset.video,b.dataset.label)) );
-    document.getElementById('btn-stop').addEventListener('click', ()=>{ player.pause(); player.currentTime=0; setStatus('停止'); });
-    document.getElementById('btn-full').addEventListener('click', ()=> requestFullscreenSafe(stage));
-    async function requestFullscreenSafe(el){ try{ if(el.requestFullscreen) await el.requestFullscreen(); else if(el.webkitRequestFullscreen) el.webkitRequestFullscreen(); }catch(_){} }
   </script>
 </body>
 </html>
+
