--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     body.played .screen{display:flex}
     .screen{border:1px solid #333;border-radius:16px;overflow:hidden}
     .stage{width:100%;height:100%;background:#000;min-height:80vh;display:flex;align-items:center;justify-content:center}
-    .stage video{width:100%;height:100%;object-fit:contain}
-    .status{color:#0f0;font-size:12px;border-top:1px solid #333;padding:6px}
+    .player-embed{width:100%;height:100%;border:0;background:#000}
   </style>
 </head>
 <body class="gate-active">
@@ -67,18 +66,18 @@
     </div>
   </div>
 
-  <!-- 動画再生エリア -->
+  <!-- 動画再生エリア（Google Drive preview 埋め込み） -->
   <main class="wrap">
     <section class="panel screen">
       <div class="stage" id="stage">
-        <video 
-          id="player" 
-          src="https://drive.google.com/uc?export=download&id=1jy5tZeSYAmptpgg57RR4XfZ-IY-zm7yQ"
-          controls
-          playsinline
-          webkit-playsinline
-          preload="metadata"
-        ></video>
+        <!-- ここだけ差し替え：/file/d/ID/preview をiframeで埋め込む -->
+        <iframe
+          class="player-embed"
+          src="https://drive.google.com/file/d/1jy5tZeSYAmptpgg57RR4XfZ-IY-zm7yQ/preview"
+          allow="autoplay; fullscreen"
+          allowfullscreen
+          referrerpolicy="no-referrer"
+        ></iframe>
       </div>
     </section>
   </main>
@@ -92,19 +91,14 @@
     const btnRuleNext = document.getElementById('btn-rule-next');
     const btnAccept = document.getElementById('btn-accept');
 
-    btnConfirm.addEventListener('click', ()=>{
-      step1.style.display='none'; 
-      step2.style.display='block';
-    });
-    btnRuleNext.addEventListener('click', ()=>{
-      step2.style.display='none'; 
-      step3.style.display='block';
-    });
+    btnConfirm.addEventListener('click', ()=>{ step1.style.display='none'; step2.style.display='block'; });
+    btnRuleNext.addEventListener('click', ()=>{ step2.style.display='none'; step3.style.display='block'; });
     btnAccept.addEventListener('click', ()=>{
-      document.body.classList.remove('gate-active'); 
-      gate.style.display='none'; 
-      document.body.classList.add('played'); // 動画画面表示
+      document.body.classList.remove('gate-active');
+      gate.style.display='none';
+      document.body.classList.add('played');
     });
   </script>
 </body>
 </html>
+
